--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <!--<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" crossorigin="anonymous">-->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" crossorigin="anonymous">
     <!--<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/onepage-scroll/1.3.1/onepage-scroll.css">-->
-    <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700,800" rel="stylesheet">
     <link rel="stylesheet" href="scss/style.css">
 
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" crossorigin="anonymous"></script>
@@ -283,14 +283,104 @@
                 <h3 class="subtitle">Our apps users on the live map</h3>
             </div>
             <div class="map"></div>
-            <div class="calculate">
+            <div class="col">
+                <div class="calculate">
+                    <div class="calculate-item">
+                        <p class="title">7 000 +</p>
+                        <p class="subtitle">Apps Created Every Day</p>
+                    </div>
+                    <div class="calculate-item">
+                        <p class="title">6 000 000 +</p>
+                        <p class="subtitle">Total Apps Created All Over The World</p>
+                    </div>
+                    <div class="calculate-item">
+                        <p class="title">800 000 +</p>
+                        <p class="subtitle">App Installation Per Day</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
+<section class="range-goods">
+    <div class="container">
+        <div class="row align-items-start">
+            <div class="col-12">
+                <h2 class="title">Choose from Over <b>70</b> App Templates</h2>
+            </div>
+            <div class="col-6 offset-3">
+                <h3 class="subtitle">AppsGeyser offers the largest number of diverse customizable templates and presets for you to create an app from</h3>
+            </div>
+            <div class="w-100"></div>
+            <div class="col">
 
             </div>
         </div>
     </div>
 </section>
-<footer>
-
+<footer class="footer">
+    <nav class="footer-navigation">
+        <div class="container">
+            <div class="row">
+                <div class="col-2">
+                    <div class="navigation-item">
+                        <h4>Appsgeyser</h4>
+                        <a href="">Create</a>
+                        <a href="">Create Template</a>
+                        <a href="">Apps</a>
+                        <a href="">Showcase</a>
+                    </div>
+                </div>
+                <div class="col-2">
+                    <div class="navigation-item">
+                        <h4>Support</h4>
+                        <a href="">Request</a>
+                        <a href="">Community</a>
+                        <a href="">FAQ</a>
+                        <a href="">Knowledge base</a>
+                    </div>
+                </div>
+                <div class="col-2">
+                    <div class="navigation-item">
+                        <h4>Company</h4>
+                        <a href="">About</a>
+                        <a href="">Testinominals</a>
+                        <a href="">Custom Development</a>
+                    </div>
+                </div>
+                <div class="col-2">
+                    <div class="navigation-item">
+                        <h4>Contact us</h4>
+                        <a href="tel:+38095235344">+38095235344</a>
+                        <a href="mailto:destinee.doyle@colin.biz">destinee.doyle@colin.biz</a>
+                    </div>
+                </div>
+                <div class="col-2 offset-1">
+                    <div class="navigation-item">
+                        <h4>Follow Us</h4>
+                        <!--<a href="">icon</a>-->
+                        <!--<a href="">icon</a>-->
+                        <!--<a href="">icon</a>-->
+                        <!--<a href="">icon</a>-->
+                        <!--<a href="">icon</a>-->
+                        <!--<a href="">icon</a>-->
+                    </div>
+                </div>
+            </div>
+        </div>
+    </nav>
+    <div class="container">
+        <nav class="policy-navigation">
+            <a href="">Privacy Policy</a>
+            <a href="">Terms of Service</a>
+            <a href="">Legal info</a>
+            <a href="">Opt-out</a>
+            <a href="">DMCA</a>
+        </nav>
+        <div class="copyrighting">
+            <p>Copyright © 2011-2018 Besttoolbars, 2018</p>
+        </div>
+    </div>
 </footer>
 <script src="js/slider.js"></script>
 </body>
