--- a/index.html
+++ b/index.html
@@ -183,17 +183,21 @@
             <div class="col-12">
                 <h2 class="title">Wait! How are you completely free?</h2>
             </div>
-            <div class="col banner">
-                <div class="external-bg pink-bg"></div>
-                <div class="content">
-                    <div class="subscription"></div>
+            <div class="col">
+                <div class="banner">
+                    <div class="external-bg pink-bg"></div>
+                    <div class="content">
+                        <div class="subscription"></div>
+                    </div>
                 </div>
             </div>
-            <div class="col banner">
-                <div class="external-bg green-bg"></div>
-                <div class="content">
-                    <div class="content-bg left-hand"></div>
-                    <div class="content-bg right-hand"></div>
+            <div class="col">
+                <div class="banner">
+                    <div class="external-bg green-bg"></div>
+                    <div class="content">
+                        <div class="content-bg left-hand"></div>
+                        <div class="content-bg right-hand"></div>
+                    </div>
                 </div>
             </div>
             <div class="w-100"></div>
@@ -204,7 +208,7 @@
                 <p class="text-green">Instead we monetize through transparent <b>50/50</b> revenur share on ads. So we only profit when you profit and interested in your success</p>
             </div>
             <div class="col-8 offset-2">
-                <p>If you are here for a business app, we offer those for free without any ads. Just a little gift for you. Consider adding a small app business to your existing one.</p>
+                <p class="business-offer">If you are here for a business app, we offer those for free without any ads. Just a little gift for you. Consider adding a small app business to your existing one.</p>
             </div>
         </div>
     </div>
@@ -302,18 +306,83 @@
         </div>
     </div>
 </section>
-<section class="range-goods">
+<section class="portfolio">
     <div class="container">
-        <div class="row align-items-start">
+        <div class="row no-gutters">
             <div class="col-12">
                 <h2 class="title">Choose from Over <b>70</b> App Templates</h2>
             </div>
             <div class="col-6 offset-3">
                 <h3 class="subtitle">AppsGeyser offers the largest number of diverse customizable templates and presets for you to create an app from</h3>
             </div>
-            <div class="w-100"></div>
-            <div class="col">
 
+            <div class="col-12">
+                <div class="slider" id="portfolio-slider">
+                    <div class="options-menu">
+                        <button id="prev-button">prev</button>
+                        <button></button>
+                    </div>
+                    <div class="slide-container">
+                        <div class="slide no-gutters" data-index-slide="1">
+                            <div class="template col">
+                                <div class="template-bg website"></div>
+                                <h4 class="template-title">1Website</h4>
+                            </div>
+                            <div class="template col">
+                                <div class="template-bg messenger"></div>
+                                <h4 class="template-title">1Messenger</h4>
+                            </div>
+                            <div class="template col">
+                                <div class="template-bg browser"></div>
+                                <h4 class="template-title">1Browser</h4>
+                            </div>
+                            <div class="template col">
+                                <div class="template-bg media-player"></div>
+                                <h4 class="template-title">1Media Player</h4>
+                            </div>
+                        </div>
+                        <div class="slide no-gutters" data-index-slide="1">
+                            <div class="template col">
+                                <div class="template-bg website"></div>
+                                <h4 class="template-title">2Website</h4>
+                            </div>
+                            <div class="template col">
+                                <div class="template-bg messenger"></div>
+                                <h4 class="template-title">2Messenger</h4>
+                            </div>
+                            <div class="template col">
+                                <div class="template-bg browser"></div>
+                                <h4 class="template-title">2Browser</h4>
+                            </div>
+                            <div class="template col">
+                                <div class="template-bg media-player"></div>
+                                <h4 class="template-title">2Media Player</h4>
+                            </div>
+                        </div>
+                        <div class="slide no-gutters" data-index-slide="1">
+                            <div class="template col">
+                                <div class="template-bg website"></div>
+                                <h4 class="template-title">3Website</h4>
+                            </div>
+                            <div class="template col">
+                                <div class="template-bg messenger"></div>
+                                <h4 class="template-title">3Messenger</h4>
+                            </div>
+                            <div class="template col">
+                                <div class="template-bg browser"></div>
+                                <h4 class="template-title">3Browser</h4>
+                            </div>
+                            <div class="template col">
+                                <div class="template-bg media-player"></div>
+                                <h4 class="template-title">3Media Player</h4>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-12">
+                <button class="btn btn-create-app">Create Now for FREE</button>
             </div>
         </div>
     </div>
@@ -356,14 +425,18 @@
                     </div>
                 </div>
                 <div class="col-2 offset-1">
-                    <div class="navigation-item">
+                    <div class="navigation-item social-network">
                         <h4>Follow Us</h4>
-                        <!--<a href="">icon</a>-->
-                        <!--<a href="">icon</a>-->
-                        <!--<a href="">icon</a>-->
-                        <!--<a href="">icon</a>-->
-                        <!--<a href="">icon</a>-->
-                        <!--<a href="">icon</a>-->
+                        <div class="flex-container">
+                            <a class="icon icon-twitter" href=""></a>
+                            <a class="icon icon-facebook" href=""></a>
+                            <a class="icon icon-blogger" href=""></a>
+                        </div>
+                        <div class="flex-container">
+                            <a class="icon icon-telegram" href=""></a>
+                            <a class="icon icon-google-plus" href=""></a>
+                            <a class="icon icon-youtube" href=""></a>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -382,6 +455,7 @@
         </div>
     </div>
 </footer>
-<script src="js/slider.js"></script>
+<script src="js/comments-slider.js"></script>
+<script src="js/portfolio-slider.js"></script>
 </body>
 </html>
