--- a/index.html
+++ b/index.html
@@ -63,20 +63,23 @@
         </div>
     </div>
 </section>
-<!--<section class="about-us">-->
-    <!--<div class="container">-->
-        <!--<div class="row">-->
-            <!--<h2 class="title">Free and Simple Tool to Create, Download, Distribute and Monetize Your App</h2>-->
+<section class="about-us">
+    <div class="container">
+        <div class="row">
+            <div class="col">
+                <h2 class="title">Free and Simple Tool to Create, Download, Distribute and Monetize Your App</h2>
+            </div>
+            <div class="w-100"></div>
 
-            <!--<div>-->
-                <!--<p>Create your own app empire and make up to <b>$6,000</b> monthly passive income.</p>-->
-                <!--<p>Absolutely <b>free forever</b>. No monthly charges, no fees, no paid features.</p>-->
-                <!--<p>No needs in coding skills: <b>70+</b> app templates to create your Android app in 2 minutes</p>-->
-                <!--<p><b>Easy tutorials</b> and weekly updating knowledge base: We have multiple step-by-step guide on app creation, publication and promotion.</p>-->
-            <!--</div>-->
-        <!--</div>-->
-    <!--</div>-->
-<!--</section>-->
+
+            <div class="phone">
+                <div class="message"></div>
+                <div class="paint-can"></div>
+                <div class="money"></div>
+            </div>
+        </div>
+    </div>
+</section>
 <section class="steps">
     <div class="container">
         <div class="row">
@@ -113,11 +116,6 @@
             </div>
             <div class="col-6 offset-3">
                 <h1 class="counter-title">Publish your first app in within and take part in our promotional contest to win $200</h1>
-            </div>
-            <div class="col-12">
-                <div class="counter">
-                    <--- counter --->
-                </div>
             </div>
         </div>
     </div>
@@ -315,69 +313,79 @@
             <div class="col-6 offset-3">
                 <h3 class="subtitle">AppsGeyser offers the largest number of diverse customizable templates and presets for you to create an app from</h3>
             </div>
-
             <div class="col-12">
-                <div class="slider" id="portfolio-slider">
-                    <div class="options-menu">
-                        <button id="prev-button">prev</button>
-                        <button></button>
+                <div id="carouselExampleIndicators" class="carousel slide" data-interval="false">
+                    <div class="button-container">
+                        <a class="button-prev" href="#carouselExampleIndicators" role="button" data-slide="prev"></a>
+                        <a class="button-next" href="#carouselExampleIndicators" role="button" data-slide="next"></a>
                     </div>
-                    <div class="slide-container">
-                        <div class="slide no-gutters" data-index-slide="1">
-                            <div class="template col">
-                                <div class="template-bg website"></div>
-                                <h4 class="template-title">1Website</h4>
-                            </div>
-                            <div class="template col">
-                                <div class="template-bg messenger"></div>
-                                <h4 class="template-title">1Messenger</h4>
-                            </div>
-                            <div class="template col">
-                                <div class="template-bg browser"></div>
-                                <h4 class="template-title">1Browser</h4>
-                            </div>
-                            <div class="template col">
-                                <div class="template-bg media-player"></div>
-                                <h4 class="template-title">1Media Player</h4>
-                            </div>
-                        </div>
-                        <div class="slide no-gutters" data-index-slide="1">
-                            <div class="template col">
-                                <div class="template-bg website"></div>
-                                <h4 class="template-title">2Website</h4>
-                            </div>
-                            <div class="template col">
-                                <div class="template-bg messenger"></div>
-                                <h4 class="template-title">2Messenger</h4>
-                            </div>
-                            <div class="template col">
-                                <div class="template-bg browser"></div>
-                                <h4 class="template-title">2Browser</h4>
-                            </div>
-                            <div class="template col">
-                                <div class="template-bg media-player"></div>
-                                <h4 class="template-title">2Media Player</h4>
+                    <div class="carousel-inner slider">
+                        <div class="carousel-item">
+                            <div class="slide no-gutters">
+                                <div class="template col">
+                                    <div class="template-bg website"></div>
+                                    <h4 class="template-title">1Website</h4>
+                                </div>
+                                <div class="template col">
+                                    <div class="template-bg messenger"></div>
+                                    <h4 class="template-title">1Messenger</h4>
+                                </div>
+                                <div class="template col">
+                                    <div class="template-bg browser"></div>
+                                    <h4 class="template-title">1Browser</h4>
+                                </div>
+                                <div class="template col">
+                                    <div class="template-bg media-player"></div>
+                                    <h4 class="template-title">1Media Player</h4>
+                                </div>
                             </div>
                         </div>
-                        <div class="slide no-gutters" data-index-slide="1">
-                            <div class="template col">
-                                <div class="template-bg website"></div>
-                                <h4 class="template-title">3Website</h4>
+                        <div class="carousel-item active">
+                            <div class="slide no-gutters">
+                                <div class="template col">
+                                    <div class="template-bg website"></div>
+                                    <h4 class="template-title">2Website</h4>
+                                </div>
+                                <div class="template col">
+                                    <div class="template-bg messenger"></div>
+                                    <h4 class="template-title">2Messenger</h4>
+                                </div>
+                                <div class="template col">
+                                    <div class="template-bg browser"></div>
+                                    <h4 class="template-title">2Browser</h4>
+                                </div>
+                                <div class="template col">
+                                    <div class="template-bg media-player"></div>
+                                    <h4 class="template-title">2Media Player</h4>
+                                </div>
                             </div>
-                            <div class="template col">
-                                <div class="template-bg messenger"></div>
-                                <h4 class="template-title">3Messenger</h4>
-                            </div>
-                            <div class="template col">
-                                <div class="template-bg browser"></div>
-                                <h4 class="template-title">3Browser</h4>
-                            </div>
-                            <div class="template col">
-                                <div class="template-bg media-player"></div>
-                                <h4 class="template-title">3Media Player</h4>
+                        </div>
+                        <div class="carousel-item">
+                            <div class="slide no-gutters">
+                                <div class="template col">
+                                    <div class="template-bg website"></div>
+                                    <h4 class="template-title">3Website</h4>
+                                </div>
+                                <div class="template col">
+                                    <div class="template-bg messenger"></div>
+                                    <h4 class="template-title">3Messenger</h4>
+                                </div>
+                                <div class="template col">
+                                    <div class="template-bg browser"></div>
+                                    <h4 class="template-title">3Browser</h4>
+                                </div>
+                                <div class="template col">
+                                    <div class="template-bg media-player"></div>
+                                    <h4 class="template-title">3Media Player</h4>
+                                </div>
                             </div>
                         </div>
                     </div>
+                    <ol class="carousel-indicators indicators">
+                        <li data-target="#carouselExampleIndicators" data-slide-to="0" class="indicator"></li>
+                        <li data-target="#carouselExampleIndicators" data-slide-to="1" class="indicator active"></li>
+                        <li data-target="#carouselExampleIndicators" data-slide-to="2" class="indicator"></li>
+                    </ol>
                 </div>
             </div>
 
@@ -456,6 +464,9 @@
     </div>
 </footer>
 <script src="js/comments-slider.js"></script>
-<script src="js/portfolio-slider.js"></script>
 </body>
 </html>
+<!--<p>Create your own app empire and make up to <b>$6,000</b> monthly passive income.</p>-->
+<!--<p>Absolutely <b>free forever</b>. No monthly charges, no fees, no paid features.</p>-->
+<!--<p>No needs in coding skills: <b>70+</b> app templates to create your Android app in 2 minutes</p>-->
+<!--<p><b>Easy tutorials</b> and weekly updating knowledge base: We have multiple step-by-step guide on app creation, publication and promotion.</p>-->
