added block about us

--- a/index.html
+++ b/index.html
@@ -69,13 +69,22 @@
             <div class="col">
                 <h2 class="title">Free and Simple Tool to Create, Download, Distribute and Monetize Your App</h2>
             </div>
-            <div class="w-100"></div>
-
+            <div class="w-100">
+                <div class="text-container">
+                    <p class="top-left">Create your own app empire and make up to <b>$6,000</b> monthly passive income.</p>
+                    <p class="top-right">Absolutely <b>free forever</b>. No monthly charges, no fees, no paid features.</p>
+                    <p class="bottom-left">No needs in coding skills: <b>70+</b> app templates to create your Android app in 2 minutes</p>
+                    <p class="bottom-right"><b>Easy tutorials</b> and weekly updating knowledge base: We have multiple step-by-step guide on app creation, publication and promotion.</p>
+                </div>
+            </div>
 
             <div class="phone">
                 <div class="message"></div>
                 <div class="paint-can"></div>
                 <div class="money"></div>
+                <div class="gift-box"></div>
+                <div class="clock"></div>
+                <div class="book"></div>
             </div>
         </div>
     </div>
@@ -466,7 +475,3 @@
 <script src="js/comments-slider.js"></script>
 </body>
 </html>
-<!--<p>Create your own app empire and make up to <b>$6,000</b> monthly passive income.</p>-->
-<!--<p>Absolutely <b>free forever</b>. No monthly charges, no fees, no paid features.</p>-->
-<!--<p>No needs in coding skills: <b>70+</b> app templates to create your Android app in 2 minutes</p>-->
-<!--<p><b>Easy tutorials</b> and weekly updating knowledge base: We have multiple step-by-step guide on app creation, publication and promotion.</p>-->
