--- a/index.html
+++ b/index.html
@@ -473,5 +473,10 @@
     </div>
 </footer>
 <script src="js/comments-slider.js"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/d3/3.5.3/d3.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/topojson/1.6.9/topojson.min.js"></script>
+<script src="https://www.appsgeyser.com/js/datamaps.world.min.js"></script>
+<script src="js/map.js"></script>
 </body>
 </html>
