--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
     <title>AppsGeyser</title>
 
     <!--<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" crossorigin="anonymous">-->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" crossorigin="anonymous">
-    <!--<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/onepage-scroll/1.3.1/onepage-scroll.css">-->
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700,800" rel="stylesheet">
     <link rel="stylesheet" href="scss/style.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/flipclock/0.7.8/flipclock.css">
 
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" crossorigin="anonymous"></script>
@@ -125,6 +125,9 @@
             </div>
             <div class="col-6 offset-3">
                 <h1 class="counter-title">Publish your first app in within and take part in our promotional contest to win $200</h1>
+            </div>
+            <div class="col-6 offset-3">
+                <div id="clock"></div>
             </div>
         </div>
     </div>
@@ -473,10 +476,35 @@
     </div>
 </footer>
 <script src="js/comments-slider.js"></script>
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
+
+<!--<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>-->
+<script src="https://cdnjs.cloudflare.com/ajax/libs/flipclock/0.7.8/flipclock.js" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/3.5.3/d3.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/topojson/1.6.9/topojson.min.js"></script>
 <script src="https://www.appsgeyser.com/js/datamaps.world.min.js"></script>
 <script src="js/map.js"></script>
+<script>
+    var clock;
+    clock = $('#clock').FlipClock({
+        clockFace : 'HourCounter',
+        autoStart : false,
+        callbacks : {
+            stop : function () {
+                $('#message').html('Time out');
+            }
+        }
+
+    });
+
+    var dt = 'July 22 2015 14:38:20';
+    var first = new Date(dt);
+    var last = Date.now();
+    var remaining = first - last;
+    remaining /=1000;
+
+    clock.setTime(150000);
+    clock.setCountdown(true);
+    clock.start();
+</script>
 </body>
 </html>
