--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
 
     <!--<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" crossorigin="anonymous">-->
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700,800" rel="stylesheet">
-    <link rel="stylesheet" href="scss/style.css">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/flipclock/0.7.8/flipclock.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" crossorigin="anonymous">
+    <link rel="stylesheet" href="scss/style.css">
 
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" crossorigin="anonymous"></script>
@@ -53,7 +53,7 @@
     <div class="container">
         <div class="row">
             <div class="col-md-5">
-                <h1 class="title">The Faster and The Simplest App Builder for your app creation.</h1>
+                <h1 class="title">The <b>Faster</b> and The <b>Simplest</b> App Builder for your app creation.</h1>
                 <h3 class="subtitle">— Without any coding and fees</h3>
                 <button class="btn btn-create-app">Create Now for FREE</button>
             </div>
@@ -123,13 +123,15 @@
             <div class="col-12">
                 <button class="btn btn-create-app">Create Now for FREE</button>
             </div>
-            <div class="col-6 offset-3">
-                <h1 class="counter-title">Publish your first app in within and take part in our promotional contest to win $200</h1>
-            </div>
-            <div class="col-6 offset-3">
-                <div id="clock"></div>
-            </div>
         </div>
+    </div>
+</section>
+<section class="counter">
+    <div class="col-6 offset-3">
+        <h1 class="counter-title">Publish your first app in within and take part in our promotional contest to win $200</h1>
+    </div>
+    <div class="col-6 offset-3">
+        <div id="clock"></div>
     </div>
 </section>
 <section class="benefits">
