--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>AppsGeyser</title>
 
-    <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700,800" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,500i,600,700,800" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/flipclock/0.7.8/flipclock.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" crossorigin="anonymous">
     <link rel="stylesheet" href="vendors/animate/animateCss.css">
@@ -263,23 +263,23 @@
             <div class="col-9 offset-2">
                 <div class="slider-container">
                     <div class="slider">
-                        <div class="slide fadeIn wow" data-wow-delay="2.5s" data-index="1">
+                        <div class="slide" data-index="1">
                             <div class="icon"></div>
                             <p><b>Rose Hodges</b></p>
                             <p>Customer</p>
                         </div>
-                        <div class="slide active fadeIn wow" data-wow-delay="2s" data-index="2">
+                        <div class="slide active" data-index="2">
                             <div class="icon"></div>
                             <p><b>Betty Cunningham</b></p>
                             <p>Customer</p>
                         </div>
-                        <div class="slide fadeIn wow" data-wow-delay="2.5s" data-index="3">
+                        <div class="slide" data-index="3">
                             <div class="icon"></div>
                             <p><b>Ida Perry</b></p>
                             <p>Customer</p>
                         </div>
                     </div>
-                    <div class="indicators fadeIn wow" data-wow-delay="2s">
+                    <div class="indicators">
                         <div class="indicator" data-index="1"></div>
                         <div class="indicator active" data-index="2"></div>
                         <div class="indicator" data-index="3"></div>
@@ -293,7 +293,7 @@
     <div class="container">
         <div class="row align-items-start">
             <div class="col-12">
-                <h2 class="title zoomInDown wow">The AppsGeyser platfotm in numbers</h2>
+                <h2 class="title zoomInDown wow">The AppsGeyser platform in numbers</h2>
                 <h3 class="subtitle fadeIn wow" data-wow-delay=".7s">Our apps users on the live map</h3>
             </div>
             <div class="map fadeIn wow" data-wow-delay="1.4s"></div>
