pixel perfect block about us

--- a/index.html
+++ b/index.html
@@ -484,16 +484,16 @@
 <script src="https://www.appsgeyser.com/js/datamaps.world.min.js"></script>
 <script src="js/map.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/bodymovin/4.13.0/bodymovin.js" type="text/javascript"></script>
-<!--<script>-->
-    <!--var animation = bodymovin.loadAnimation({-->
-        <!--container: document.getElementById('phone'), // Required-->
-        <!--path: 'appG.json', // Required-->
-        <!--renderer: 'svg', // Required-->
-        <!--loop: true, // Optional-->
-        <!--autoplay: true, // Optional-->
-        <!--name: "Hello World" // Name for future reference. Optional.-->
-    <!--})-->
-<!--</script>-->
+<script>
+    var animation = bodymovin.loadAnimation({
+        container: document.getElementById('phone'), // Required
+        path: 'appG.json', // Required
+        renderer: 'svg', // Required
+        loop: true, // Optional
+        autoplay: true, // Optional
+        name: "Hello World" // Name for future reference. Optional.
+    })
+</script>
 <script>
     new WOW().init();
     var clock;
