added animate in banner

--- a/index.html
+++ b/index.html
@@ -56,9 +56,11 @@
                 <button class="btn btn-create-app fadeIn wow" data-wow-delay="3s">Create Now for FREE</button>
             </div>
             <div class="col-md-7 relative">
-                <div class="banner-bg " data-wow-delay="2s"></div>
-                <div class="banner-bg banner-bg-1 wobble2 wow" data-wow-delay="2s"></div>
-                <div class="banner-bg banner-bg-2 wobble wow" data-wow-delay="2s"></div>
+                <div class="banner-bg fadeIn wow" data-wow-delay="2s"></div>
+                <div class=" banner-bg-2 wobble wow" data-wow-delay="2.5s"></div>
+                <div class="banner-bg banner-bg-3 wobble2 wow" data-wow-delay="2.5s"></div>
+                <div class="banner-bg banner-bg-4 wobble3  wow" data-wow-delay="2.7s"></div>
+                <div class="banner-bg banner-bg-5 wobble4  wow" data-wow-delay="2.7s"></div>
             </div>
         </div>
     </div>
