--- a/index.html
+++ b/index.html
@@ -206,10 +206,10 @@
             </div>
             <div class="col">
                 <div class="banner">
-                    <div class="external-bg green-bg fadeIn wow" data-wow-delay="3.5s"></div>
+                    <div class="external-bg green-bg fadeIn wow" data-wow-delay="3s"></div>
                     <div class="content">
-                        <div class="content-bg left-hand bounceInDown wow" data-wow-delay="2.5s"></div>
-                        <div class="content-bg right-hand bounceInDown wow" data-wow-delay="2.5s"></div>
+                        <div class="content-bg left-hand bounceInDown wow" data-wow-delay="2s"></div>
+                        <div class="content-bg right-hand bounceInDown wow" data-wow-delay="2s"></div>
                     </div>
                 </div>
             </div>
@@ -218,10 +218,10 @@
                 <p class="text-pink fadeIn wow" data-wow-delay="2s">We in AppsGeyser believe that the power of makers must be unlimited. So we don’t introduce paid features, don’t offer any paid subscription plans, everything is <b>free</b>.</p>
             </div>
             <div class="col">
-                <p class="text-green fadeIn wow" data-wow-delay="3.5s">Instead we monetize through transparent <b>50/50</b> revenur share on ads. So we only profit when you profit and interested in your success</p>
+                <p class="text-green fadeIn wow" data-wow-delay="2.7s">Instead we monetize through transparent <b>50/50</b> revenur share on ads. So we only profit when you profit and interested in your success</p>
             </div>
             <div class="col-8 offset-2">
-                <p class="business-offer zoomIn wow" data-wow-delay="4s">If you are here for a business app, we offer those for free without any ads. Just a little gift for you. Consider adding a small app business to your existing one.</p>
+                <p class="business-offer zoomIn wow" data-wow-delay="3.2s">If you are here for a business app, we offer those for free without any ads. Just a little gift for you. Consider adding a small app business to your existing one.</p>
             </div>
         </div>
     </div>
@@ -304,15 +304,15 @@
                 <div class="calculate fadeIn wow" data-wow-delay="2s">
                     <div class="calculate-item">
                         <p class="title zoomIn wow" data-wow-delay="2.5s">7 000 +</p>
-                        <p class="subtitle fadeIn wow" data-wow-delay="3s">Apps Created Every Day</p>
+                        <p class="subtitle fadeIn wow" data-wow-delay="2.8s">Apps Created Every Day</p>
                     </div>
                     <div class="calculate-item">
                         <p class="title zoomIn wow" data-wow-delay="2.5s">6 000 000 +</p>
-                        <p class="subtitle fadeIn wow" data-wow-delay="3s">Total Apps Created All Over The World</p>
+                        <p class="subtitle fadeIn wow" data-wow-delay="2.8s">Total Apps Created All Over The World</p>
                     </div>
                     <div class="calculate-item">
                         <p class="title zoomIn wow" data-wow-delay="2.5s">800 000 +</p>
-                        <p class="subtitle fadeIn wow" data-wow-delay="3s">App Installation Per Day</p>
+                        <p class="subtitle fadeIn wow" data-wow-delay="2.8s">App Installation Per Day</p>
                     </div>
                 </div>
             </div>
@@ -484,10 +484,10 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/3.5.3/d3.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/topojson/1.6.9/topojson.min.js"></script>
 <script src="https://www.appsgeyser.com/js/datamaps.world.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/bodymovin/4.13.0/bodymovin.min.js" type="text/javascript"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/bodymovin/4.13.0/bodymovin.js" type="text/javascript"></script>
 <script src="js/comments-slider.min.js"></script>
 <script src="js/map.js"></script>
-<script src="js/animation.min.js"></script>
+<script src="js/animation.js"></script>
 <script src="js/counter.min.js"></script>
 
 </body>
