--- a/index.html
+++ b/index.html
@@ -46,20 +46,18 @@
     </div>
 </header>
 <section class="banner">
-    <div class="container">
-        <div class="row">
-            <div class="col-md-5">
-                <h1 class="title fadeIn wow" data-wow-duration="2s">The <b>Faster</b> and The <b>Simplest</b> App Builder for your app creation.</h1>
-                <h3 class="subtitle fadeIn wow" data-wow-delay="1s">— Without any coding and fees</h3>
-                <button class="btn btn-create-app fadeIn wow" data-wow-delay="2s">Create Now for FREE</button>
-            </div>
-            <div class="col-md-7 relative">
-                <div class="banner-bg fadeIn wow" data-wow-delay="2s"></div>
-                <div class=" banner-bg-2 wobble wow" data-wow-delay="2.5s"></div>
-                <div class="banner-bg banner-bg-3 wobble2 wow" data-wow-delay="2.5s"></div>
-                <div class="banner-bg banner-bg-4 wobble3  wow" data-wow-delay="2.7s"></div>
-                <div class="banner-bg banner-bg-5 wobble4  wow" data-wow-delay="2.7s"></div>
-            </div>
+    <div class="container relative">
+        <div class="title-container">
+            <h1 class="title fadeIn wow" data-wow-duration="2s">The <b>Faster</b> and The <b>Simplest</b> App Builder for your app creation.</h1>
+            <h3 class="subtitle fadeIn wow" data-wow-delay="1s">— Without any coding and fees</h3>
+            <button class="btn btn-create-app fadeIn wow" data-wow-delay="2s">Create Now for FREE</button>
+        </div>
+        <div class="banner-container">
+            <div class="banner-bg fadeIn wow" data-wow-delay="2s"></div>
+            <div class=" banner-bg-2 wobble  wow" data-wow-delay="2.5s"></div>
+            <div class="banner-bg banner-bg-3 wobble2 wow" data-wow-delay="2.5s"></div>
+            <div class="banner-bg banner-bg-4 wobble3  wow" data-wow-delay="2.7s"></div>
+            <div class="banner-bg banner-bg-5 wobble4  wow" data-wow-delay="2.7s"></div>
         </div>
     </div>
 </section>
