--- a/index.html
+++ b/index.html
@@ -74,33 +74,33 @@
         </div>
     </div>
 </section>
-<!--<section class="about-us">-->
-    <!--<div class="container">-->
-        <!--<div class="row">-->
-            <!--<div class="col">-->
-                <!--<h2 class="title zoomIn wow">Free and Simple Tool to Create, Download, Distribute and Monetize Your App</h2>-->
-            <!--</div>-->
-            <!--<div class="w-100">-->
-                <!--<div class="text-container">-->
-                    <!--<p class="top-left fadeIn wow" data-wow-delay="3s">Create your own app empire and make up to <b>$6,000</b> monthly passive income.</p>-->
-                    <!--<p class="top-right fadeIn wow" data-wow-delay="3s">Absolutely <b>free forever</b>. No monthly charges, no fees, no paid features.</p>-->
-                    <!--<p class="bottom-left fadeIn wow" data-wow-delay="3.5s">No needs in coding skills: <b>70+</b> app templates to create your Android app in 2 minutes</p>-->
-                    <!--<p class="bottom-right fadeIn wow" data-wow-delay="3.5s"><b>Easy tutorials</b> and weekly updating knowledge base: We have multiple step-by-step guide on app creation, publication and promotion.</p>-->
-                <!--</div>-->
-            <!--</div>-->
+<section class="about-us">
+    <div class="container">
+        <div class="row">
+            <div class="col">
+                <h2 class="title zoomIn wow">Free and Simple Tool to Create, Download, Distribute and Monetize Your App</h2>
+            </div>
+            <div class="w-100">
+                <div class="text-container">
+                    <p class="top-left fadeIn wow" data-wow-delay="3s">Create your own app empire and make up to <b>$6,000</b> monthly passive income.</p>
+                    <p class="top-right fadeIn wow" data-wow-delay="3s">Absolutely <b>free forever</b>. No monthly charges, no fees, no paid features.</p>
+                    <p class="bottom-left fadeIn wow" data-wow-delay="3.5s">No needs in coding skills: <b>70+</b> app templates to create your Android app in 2 minutes</p>
+                    <p class="bottom-right fadeIn wow" data-wow-delay="3.5s"><b>Easy tutorials</b> and weekly updating knowledge base: We have multiple step-by-step guide on app creation, publication and promotion.</p>
+                </div>
+            </div>
 
-            <!--<div id="phone" class="phone fadeIn wow" data-wow-delay="1s">-->
-                <!--<div class="message bounceInDown wow" data-wow-delay="1.5s"></div>-->
-                <!--<div class="paint-can bounceInDown wow" data-wow-delay="1.5s"></div>-->
-                <!--<div class="money bounceInDown wow" data-wow-delay="2s"></div>-->
-                <!--<div class="gift-box bounceInDown wow" data-wow-delay="2s"></div>-->
-                <!--<div class="clock bounceInDown wow" data-wow-delay="2.2s"></div>-->
-                <!--<div class="book bounceInDown wow" data-wow-delay="2.2s"></div>-->
-                <!--<div id="animate-about-us"></div>-->
-            <!--</div>-->
-        <!--</div>-->
-    <!--</div>-->
-<!--</section>-->
+            <div id="phone" class="phone fadeIn wow" data-wow-delay="1s">
+                <div class="message bounceInDown wow" data-wow-delay="1.5s"></div>
+                <div class="paint-can bounceInDown wow" data-wow-delay="1.5s"></div>
+                <div class="money bounceInDown wow" data-wow-delay="2s"></div>
+                <div class="gift-box bounceInDown wow" data-wow-delay="2s"></div>
+                <div class="clock bounceInDown wow" data-wow-delay="2.2s"></div>
+                <div class="book bounceInDown wow" data-wow-delay="2.2s"></div>
+                <div id="animate-about-us"></div>
+            </div>
+        </div>
+    </div>
+</section>
 <section class="steps">
     <div class="container">
         <div class="row">
