--- a/index.html
+++ b/index.html
@@ -81,21 +81,21 @@
                 <h2 class="title zoomIn wow">Free and Simple Tool to Create, Download, Distribute and Monetize Your App</h2>
             </div>
             <div class="w-100">
-                <div class="text-container">
-                    <p class="top-left fadeIn wow" data-wow-delay="3s">Create your own app empire and make up to <b>$6,000</b> monthly passive income.</p>
-                    <p class="top-right fadeIn wow" data-wow-delay="3s">Absolutely <b>free forever</b>. No monthly charges, no fees, no paid features.</p>
-                    <p class="bottom-left fadeIn wow" data-wow-delay="3.5s">No needs in coding skills: <b>70+</b> app templates to create your Android app in 2 minutes</p>
-                    <p class="bottom-right fadeIn wow" data-wow-delay="3.5s"><b>Easy tutorials</b> and weekly updating knowledge base: We have multiple step-by-step guide on app creation, publication and promotion.</p>
-                </div>
+                <!--<div class="text-container">-->
+                <!--<p class="top-left fadeIn wow" data-wow-delay="3s">Create your own app empire and make up to <b>$6,000</b> monthly passive income.</p>-->
+                <!--<p class="top-right fadeIn wow" data-wow-delay="3s">Absolutely <b>free forever</b>. No monthly charges, no fees, no paid features.</p>-->
+                <!--<p class="bottom-left fadeIn wow" data-wow-delay="3.5s">No needs in coding skills: <b>70+</b> app templates to create your Android app in 2 minutes</p>-->
+                <!--<p class="bottom-right fadeIn wow" data-wow-delay="3.5s"><b>Easy tutorials</b> and weekly updating knowledge base: We have multiple step-by-step guide on app creation, publication and promotion.</p>-->
+                <!--</div>-->
             </div>
 
             <div id="phone" class="phone fadeIn wow" data-wow-delay="1s">
-                <div class="message bounceInDown wow" data-wow-delay="1.5s"></div>
-                <div class="paint-can bounceInDown wow" data-wow-delay="1.5s"></div>
-                <div class="money bounceInDown wow" data-wow-delay="2s"></div>
-                <div class="gift-box bounceInDown wow" data-wow-delay="2s"></div>
-                <div class="clock bounceInDown wow" data-wow-delay="2.2s"></div>
-                <div class="book bounceInDown wow" data-wow-delay="2.2s"></div>
+                <!--<div class="message bounceInDown wow" data-wow-delay="1.5s"></div>-->
+                <!--<div class="paint-can bounceInDown wow" data-wow-delay="1.5s"></div>-->
+                <!--<div class="money bounceInDown wow" data-wow-delay="2s"></div>-->
+                <!--<div class="gift-box bounceInDown wow" data-wow-delay="2s"></div>-->
+                <!--<div class="clock bounceInDown wow" data-wow-delay="2.2s"></div>-->
+                <!--<div class="book bounceInDown wow" data-wow-delay="2.2s"></div>-->
                 <div id="animate-about-us"></div>
             </div>
         </div>
@@ -139,63 +139,63 @@
     </div>
 </section>
 <section class="counter">
-    <div class="col-6 offset-3">
+    <div class="col-md-6 offset-md-3">
         <h1 class="counter-title fadeIn wow">Publish your first app in within and take part in our promotional contest to win $200</h1>
     </div>
-    <div class="col-lg-6 offset-lg-3 fadeIn wow" data-wow-delay="1s">
+    <div class="col-lg-6 offset-lg-3 fadeIn wow clock-container" data-wow-delay="1s">
         <div id="clock"></div>
     </div>
 </section>
 <section class="benefits">
     <div class="container">
         <div class="row align-items-start">
-            <div class="col-12">
+            <div class="col-12 order_1">
                 <h2 class="title fadeIn wow">Meet Our Main Benefits Becoming Yours</h2>
             </div>
 
-            <div class="col-6 col-lg-4">
+            <div class="col-6 col-lg-4 order_5">
                 <div class="benefits-item">
                     <div class="icon icon-lightning fadeInUp wow" data-wow-delay="1s"></div>
                     <h3 class="subtitle fadeInUp wow" data-wow-delay="1.3s">Fasters app builder</h3>
                     <p class="fadeInUp wow" data-wow-delay="1.6s">30 seconds to compile your app, no need to wait</p>
                 </div>
             </div>
-            <div class="col-6 col-lg-4">
+            <div class="col-6 col-lg-4 order_3">
                 <div class="benefits-item">
                     <div class="icon icon-clock fadeInUp wow" data-wow-delay="1.3s"></div>
                     <h3 class="subtitle fadeInUp wow" data-wow-delay="1.6s">Easiest App Builder Out There</h3>
                     <p class="fadeInUp wow" data-wow-delay="2s">You can create an app in 2 minutes</p>
                 </div>
             </div>
-            <div class="col-6 col-lg-4">
+            <div class="col-6 col-lg-4 order_4">
                 <div class="benefits-item">
                     <div class="icon icon-phone fadeInUp wow" data-wow-delay="1.6s"></div>
                     <h3 class="subtitle fadeInUp wow" data-wow-delay="2s">A Lot of Templates</h3>
                     <p class="fadeInUp wow" data-wow-delay="2.3s">Over 70 templates to express yourself and experiments</p>
                 </div>
             </div>
-            <div class="col-6 col-lg-4">
+            <div class="col-6 col-lg-4 order_7">
                 <div class="benefits-item">
                     <div class="icon icon-book fadeInUp wow" data-wow-delay="2s"></div>
                     <h3 class="subtitle fadeInUp wow" data-wow-delay="2.3s">Tutorials and Guides</h3>
                     <p class="fadeInUp wow" data-wow-delay="2.6s">We give away step-by-step guides to create, publish, promote and monetize your apps</p>
                 </div>
             </div>
-            <div class="col-6 col-lg-4">
+            <div class="col-6 col-lg-4 order_2">
                 <div class="benefits-item">
                     <div class="icon icon-medal fadeInUp wow" data-wow-delay="2.3s"></div>
                     <h3 class="subtitle fadeInUp wow" data-wow-delay="2.6s">We're Interested in Your Success</h3>
                     <p class="fadeInUp wow" data-wow-delay="3s">We will teach you to create popular apps</p>
                 </div>
             </div>
-            <div class="col-6 col-lg-4">
+            <div class="col-6 col-lg-4 order_6">
                 <div class="benefits-item">
                     <div class="icon icon-hand fadeInUp wow" data-wow-delay="2.6s"></div>
                     <h3 class="subtitle fadeInUp wow" data-wow-delay="3s">Complete Experience</h3>
                     <p class="fadeInUp wow" data-wow-delay="3.3s">We'll lead you from creation of your first app to growing and monetizing your own app empire</p>
                 </div>
-            </div>
-            <div class="col-12">
+            </div order_>
+            <div class="col-12 order_8">
                 <button class="btn btn-create-app fadeIn wow" data-wow-delay="3s">Create Now for FREE</button>
             </div>
         </div>
