--- a/index.html
+++ b/index.html
@@ -270,7 +270,7 @@
                 </div>
             </div>
             <div class="col-12 col-lg-9 offset-lg-2">
-                <div class="slider-container">
+                <div class="slider-container fadeIn wow" data-wow-delay="2s">
                     <div class="slider">
                         <div class="slide" data-index="1">
                             <div class="icon"></div>
