--- a/index.html
+++ b/index.html
@@ -80,22 +80,17 @@
             <div class="col">
                 <h2 class="title zoomIn wow">Free and Simple Tool to Create, Download, Distribute and Monetize Your App</h2>
             </div>
-            <div class="w-100">
-                <!--<div class="text-container">-->
-                <!--<p class="top-left fadeIn wow" data-wow-delay="3s">Create your own app empire and make up to <b>$6,000</b> monthly passive income.</p>-->
-                <!--<p class="top-right fadeIn wow" data-wow-delay="3s">Absolutely <b>free forever</b>. No monthly charges, no fees, no paid features.</p>-->
-                <!--<p class="bottom-left fadeIn wow" data-wow-delay="3.5s">No needs in coding skills: <b>70+</b> app templates to create your Android app in 2 minutes</p>-->
-                <!--<p class="bottom-right fadeIn wow" data-wow-delay="3.5s"><b>Easy tutorials</b> and weekly updating knowledge base: We have multiple step-by-step guide on app creation, publication and promotion.</p>-->
-                <!--</div>-->
+            <div class="w-100"></div>
+            <div class="col banner-mobile"></div>
+            <div class="w-100"></div>
+            <div class="col text-container">
+                <p class="icon icon-green">Create your own app empire and make up to <b>$6,000</b> monthly passive income.</p>
+                <p class="icon icon-pink">Absolutely <b>free forever</b>. No monthly charges, no fees, no paid features.</p>
+                <p class="icon icon-orange">No needs in coding skills: <b>70+</b> app templates to create your Android app in 2 minutes</p>
+                <p class="icon icon-dark-green"><b>Easy tutorials</b> and weekly updating knowledge base: We have multiple step-by-step guide on app creation, publication and promotion.</p>
             </div>
 
             <div id="phone" class="phone fadeIn wow" data-wow-delay="1s">
-                <!--<div class="message bounceInDown wow" data-wow-delay="1.5s"></div>-->
-                <!--<div class="paint-can bounceInDown wow" data-wow-delay="1.5s"></div>-->
-                <!--<div class="money bounceInDown wow" data-wow-delay="2s"></div>-->
-                <!--<div class="gift-box bounceInDown wow" data-wow-delay="2s"></div>-->
-                <!--<div class="clock bounceInDown wow" data-wow-delay="2.2s"></div>-->
-                <!--<div class="book bounceInDown wow" data-wow-delay="2.2s"></div>-->
                 <div id="animate-about-us"></div>
             </div>
         </div>
@@ -194,7 +189,7 @@
                     <h3 class="subtitle fadeInUp wow" data-wow-delay="3s">Complete Experience</h3>
                     <p class="fadeInUp wow" data-wow-delay="3.3s">We'll lead you from creation of your first app to growing and monetizing your own app empire</p>
                 </div>
-            </div order_>
+            </div>
             <div class="col-12 order_8">
                 <button class="btn btn-create-app fadeIn wow" data-wow-delay="3s">Create Now for FREE</button>
             </div>
@@ -485,7 +480,7 @@
     </div>
 </footer>
 
-<script src="https://cdnjs.cloudflare.com/ajax/libs/wow/1.1.2/wow.min.js" crossorigin="anonymous"></script>
+<!--<script src="https://cdnjs.cloudflare.com/ajax/libs/wow/1.1.2/wow.min.js" crossorigin="anonymous"></script>-->
 <script src="https://cdnjs.cloudflare.com/ajax/libs/flipclock/0.7.8/flipclock.min.js" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/3.5.3/d3.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/topojson/1.6.9/topojson.min.js"></script>
