mobile last version

--- a/index.html
+++ b/index.html
@@ -301,6 +301,7 @@
                 <h3 class="subtitle fadeIn wow" data-wow-delay=".7s">Our apps users on the live map</h3>
             </div>
             <div class="map fadeIn wow" data-wow-delay="1.4s"></div>
+            <div class="map-mobile fadeIn wow" data-wow-delay="1.4s"></div>
             <div class="col">
                 <div class="calculate fadeIn wow" data-wow-delay="2s">
                     <div class="calculate-item">
